--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -23,6 +23,7 @@
     outline: 0 !important;
     box-shadow: none !important;
     height: 33px;
+    width: 135px;
   }
   // .p-buttonset .p-button:first-of-type {
   //   border-top-left-radius: 20px;
