--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -115,7 +115,7 @@
             <div class="select-contract" >
               <div class="div_file_attach">
                 <div *ngIf="this.attachFileNameArr.length == 0" style="color:gray">{{'choose.contract.file.attach' | translate }}</div>
-                <div *ngFor="let item of this.datas.attachFileNameArr" style="width: 80%;">{{item}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item)" src="../../../../../../assets/img/icon_close.svg"></div>
+                <div *ngFor="let item of this.datas.attachFileNameArr; let i = index" style="width: 80%;">{{item}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item, i)" src="../../../../../../assets/img/icon_close.svg"></div>
               </div>
               <img src="assets/img/attachment.svg" alt="mobifone.contract" (click)="addFileAttach()">
             </div>
