fix bug so hop dong xem chi tiet

--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -14,7 +14,7 @@
         </div>
         <div>
           <span class="title-contract">Số hợp đồng:</span>
-          <span>{{datas.is_data_contract.code}}</span>
+          <span>{{datas.is_data_contract.contract_no}}</span>
         </div>
         <div>
           <span class="title-contract">File đính kèm:</span>
