--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -58,9 +58,9 @@
           <div class="div_icon" *ngIf="status == 'draft' && isQLHD_02">
             <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}" (click)="openEdit(item.id)" />
           </div>
-          <!-- <div class="div_icon" *ngIf="status == 'draft'">
+          <div class="div_icon" *ngIf="status == 'draft'">
             <img src="../../assets/img/icon_delete.svg" class="img_icon" ngbTooltip="{{'contract.delete' | translate}}" (click)="deleteContract(item.id)" />
-          </div> -->
+          </div>
           <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'complete') && isQLHD_12">
             <img src="../../assets/img/icon_view_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.view' | translate}}" (click)="contractConnect(item.id)"/>
           </div>
