--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -1,11 +1,11 @@
 <!--xử lý gọi các component trong các step theo từng điều kiện-->
 <div *ngIf="(action=='add' && isQLHD_01) || (action=='add-contract-connect' && isQLHD_11) || (action=='edit' && isQLHD_02) || (action=='copy' && isQLHD_08)" class="container-fluid">
-    <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step"></app-contract-header>
+    <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step" (messageEvent)="receiveMessage($event)"></app-contract-header>
     <ng-container>
-        <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
-        <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas" [saveDraftStep]="datas.save_draft.determine_signer" [step]="step" (stepChangeDetermineSigner)="getStep($event)"></app-determine-signer>
-        <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step" [saveDraftStep]="datas.save_draft.sample_contract" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
-        <app-confirm-infor-contract #confirmInforContract *ngIf="step == 'confirm-contract'" [datas]="datas" [saveDraftStep]="datas.save_draft.confirm_contract" [step]="step" (stepChangeConfirmInforContract)="getStep($event)"></app-confirm-infor-contract>
+        <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step" [save_draft_infor]="shareData" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
+        <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas" [save_draft_infor]="shareData" [step]="step" (stepChangeDetermineSigner)="getStep($event)"></app-determine-signer>
+        <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step" [save_draft_infor]="shareData" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
+        <app-confirm-infor-contract #confirmInforContract *ngIf="step == 'confirm-contract'" [datas]="datas" [save_draft_infor]="shareData" [step]="step" (stepChangeConfirmInforContract)="getStep($event)"></app-confirm-infor-contract>
     </ng-container>
 </div>
 <div *ngIf="!(action=='add' && isQLHD_01) && !(action=='add-contract-connect' && isQLHD_11) && !(action=='edit' && isQLHD_02) && !(action=='copy' && isQLHD_08)">
