--- a/src/app/main/contract-template/dialog/share-contract-template-dialog/share-contract-template-dialog.component.scss
+++ b/src/app/main/contract-template/dialog/share-contract-template-dialog/share-contract-template-dialog.component.scss
@@ -47,6 +47,39 @@
     margin-top: 5px;
     margin-bottom: 0;
   }
+  #table {
+    border-collapse: collapse;
+    width: 100%;
+    font-size: 13px;
+    font-family: font_lexend_deca;
+    }
+    #table td, #table th {
+    //border: 1px solid #ddd;
+    padding: 8px;
+    }
+    
+    #table tr:nth-child(even){background-color: #f2f2f2;}
+    
+    #table tr:hover {background-color: #ddd;}
+    
+    #table th {
+    //text-align: center;
+    background-color: #E2ECF6;
+    color: #106DB6;
+    }
+    
+    #table tr:last-child th:first-child {
+    border-top-left-radius: 10px;
+    }
+    #table tr:last-child th:last-child {
+    border-top-right-radius: 10px;
+    }
+    #table tr:last-child td:first-child {
+    border-bottom-left-radius: 10px;
+    }
+    #table tr:last-child td:last-child {
+    border-bottom-right-radius: 10px;
+    }
   :host ::ng-deep {
     .p-dropdown, .p-multiselect {
         border: 1px solid #106DB6;
@@ -72,6 +105,51 @@
     }
     .p-chips-token{
       margin: 2px 0;
+    }
+
+    .p-selectbutton .p-button {
+      outline: 0 !important;
+      box-shadow: none !important;
+      height: 33px;
+      width: 50%;
+    }
+    .p-selectbutton .p-button.p-highlight {
+      background: #c5ebff;
+      border-color: #c5ebff;
+      color: #106DB6;
+    }
+    .p-paginator .p-paginator-pages .p-paginator-page{
+      color: black;
+      float: left;
+      padding: 8px 16px;
+      text-decoration: none;
+      transition: background-color .3s;
+      border: 1px solid #ddd;
+      margin: 4px;
+      height: 26px !important;
+      width: 50px;
+      border-radius: 5px;
+      background-color: #e6e6e6;
+    }
+    
+    .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
+      background-color: #2199e8;
+      color: white;
+      border: 1px solid #2199e8;
+    }
+    
+    .p-paginator-bottom .p-ripple{
+      padding: 10px;
+      border-width: 0 !important;
+      height: 26px !important;
+      width: 50px !important;
+    }
+    .p-datatable-table, .p-datatable-table .ng-star-inserted, .p-paginator-pages .ng-star-inserted{
+      font-size: 13px;
+      font-family: font_lexend_deca;
+    }
+    .p-datatable .p-paginator-bottom {
+      border-width: 0;
     }
   }
   .invalid{
