--- a/src/app/main/contract-template/add-contract-template/add-contract-template.component.html
+++ b/src/app/main/contract-template/add-contract-template/add-contract-template.component.html
@@ -1,5 +1,5 @@
 <!--xử lý gọi các component trong các step theo từng điều kiện-->
-<div *ngIf="(action=='add' && isQLHD_01) || (action=='add-contract-connect' && isQLHD_11) || (action=='edit' && isQLHD_02) || (action=='copy' && isQLHD_08)" class="container-fluid">
+<div *ngIf="(action=='add' && isQLHD_01) || action=='edit'" class="container-fluid">
     <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step"></app-contract-header>
     <ng-container>
       <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
