--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -60,6 +60,9 @@
 
       <div class="col-md-3 item_icon">
         <div style="display: flex; justify-content: center;">
+          <div class="div_icon">
+            <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}" (click)="openEdit(item.id)" />
+          </div>
           <div class="div_icon" *ngIf="isShare=='off'">
             <img *ngIf="item.status == 10" src="../../assets/img/icon_stop_release.svg" class="img_icon" ngbTooltip="Ngừng phát hành" (click)="stopContractTemplate(item.id)"/>
             <img *ngIf="item.status == 32" src="../../assets/img/icon_open_release.svg" class="img_icon" ngbTooltip="Mở phát hành" (click)="releaseContractTemplate(item.id)"/>
