edit add contract template

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,6 +32,7 @@
       </div>
     </div>
     <div class="input-form ng-touched ng-pristine ng-invalid">
+      <a href="econtract://app/login/55/_/_/mau_hd/maiminhtu0606@gmail.com">Link</a>
       <form class="form-signin" [formGroup]="loginForm">
         <div *ngIf="type==1" class="form-group note">{{'login.note.user' | translate}}</div>
         <div class="form-group">
