--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -1,13 +1,61 @@
 <!--xử lý gọi các component trong các step theo từng điều kiện-->
-<div *ngIf="(action=='add' && isQLHD_01) || (action=='add-contract-connect' && isQLHD_11) || (action=='edit' && isQLHD_02) || (action=='copy' && isQLHD_08)" class="container-fluid">
-    <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step" (messageEvent)="receiveMessage($event)"></app-contract-header>
-    <ng-container>
-        <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step" [save_draft_infor]="shareData" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
-        <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas" [save_draft_infor]="shareData" [step]="step" (stepChangeDetermineSigner)="getStep($event)"></app-determine-signer>
-        <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step" [save_draft_infor]="shareData" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
-        <app-confirm-infor-contract #confirmInforContract *ngIf="step == 'confirm-contract'" [datas]="datas" [save_draft_infor]="shareData" [step]="step" (stepChangeConfirmInforContract)="getStep($event)"></app-confirm-infor-contract>
+<div *ngIf="(action=='add' && isQLHD_01) || (action=='add-contract-connect' && isQLHD_11) || (action=='edit' && isQLHD_02) || (action=='copy' && isQLHD_08)"
+    class="container-fluid">
+    <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step"
+        (messageEvent)="receiveMessage($event)"></app-contract-header>
+
+    <div class="row" style="margin: 0 22%">
+        <div class="radio col-md-4 label_type">
+            <label><input type="radio" name="contract_create" [value]="1" [(ngModel)]="type"
+                    (change)="changeType($event)">
+                <span> {{'contract.not-by-template' | translate}}</span></label>
+        </div>
+        <div class="radio col-md-4 label_type">
+            <label><input type="radio" name="contract_create" [value]="2" [(ngModel)]="type"
+                    (change)="changeType($event)">
+                <span> {{'contract.by-template' | translate}}</span></label>
+        </div>
+        <div class="radio col-md-4 label_type">
+            <label><input type="radio" name="contract_create" [value]="3" [(ngModel)]="type"
+                    (change)="changeType($event)">
+                <span> {{'contract.by-batch' | translate}}</span></label>
+        </div>
+    </div>
+
+    <ng-container *ngIf="type == 1">
+        <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step"
+            [save_draft_infor]="shareData" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
+        <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas"
+            [save_draft_infor]="shareData" [step]="step" (stepChangeDetermineSigner)="getStep($event)">
+        </app-determine-signer>
+        <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step"
+            [save_draft_infor]="shareData" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
+        <app-confirm-infor-contract #confirmInforContract *ngIf="step == 'confirm-contract'" [datas]="datas"
+            [save_draft_infor]="shareData" [step]="step" (stepChangeConfirmInforContract)="getStep($event)">
+        </app-confirm-infor-contract>
+    </ng-container>
+
+    <ng-container *ngIf="type == 2">
+        <!-- <app-infor-contract #infoNotContractForm *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step"
+            [save_draft_infor]="shareData" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
+        <app-determine-signer #partyNotContractForm ateStep2 *ngIf="step == 'determine-contract'" [datas]="datas"
+            [save_draft_infor]="shareData" [step]="step" (stepChangeDetermineSigner)="getStep($event)">
+        </app-determine-signer>
+        <app-sample-contract #sampleNotContractForm *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step"
+            [save_draft_infor]="shareData" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
+        <app-confirm-infor-contract #confirmNotContractForm *ngIf="step == 'confirm-contract'" [datas]="datas"
+            [save_draft_infor]="shareData" [step]="step" (stepChangeConfirmInforContract)="getStep($event)">
+        </app-confirm-infor-contract> -->
+        <div>
+            Hợp đồng đơn lẻ theo mẫu
+        </div>
+    </ng-container>
+
+    <ng-container *ngIf="type == 3">
+        Hợp đồng theo lô
     </ng-container>
 </div>
-<div *ngIf="!(action=='add' && isQLHD_01) && !(action=='add-contract-connect' && isQLHD_11) && !(action=='edit' && isQLHD_02) && !(action=='copy' && isQLHD_08)">
+<div
+    *ngIf="!(action=='add' && isQLHD_01) && !(action=='add-contract-connect' && isQLHD_11) && !(action=='edit' && isQLHD_02) && !(action=='copy' && isQLHD_08)">
     {{'no.role' | translate}}
 </div>
