--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -1,102 +1,94 @@
 <div class="row col-md-12">
-    <div class="col-md-5" style="display: flex; flex-direction: column">
-        <div class="form-group">
-            <div class="label_item">Mẫu hợp đồng <span class="require_star">*</span></div>
-            <div>
-                <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="type_id" optionLabel="name"
-                    optionValue="id" placeholder="Chọn mẫu hợp đồng" [filter]="true" filterBy="name"
-                    [showClear]="true"></p-dropdown>
+  <div class="col-md-5" style="display: flex; flex-direction: column">
+    <div class="form-group">
+      <div class="label_item">Mẫu hợp đồng <span class="require_star">*</span></div>
+      <div>
+        <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="form_id" optionLabel="name"
+          optionValue="id" placeholder="Chọn hợp đồng" [filter]="true" filterBy="name" [showClear]="true"
+          (onChange)="OnChangeForm($event)">
+        </p-dropdown>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="label_item">Số hợp đồng </div>
+      <div class="input-group">
+        <input #nameContract type="text" [(ngModel)]="this.datasForm.contract_no" class="input_text" placeholder="Nhập số hợp đồng" />
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="select-file-contract">
+        <div class="file-approve">
+          <div class="label_item">{{'file.attach' | translate}}</div>
+          <input id="attachFile" type="file" accept=".pdf, .doc, .docx" (change)="fileChangedAttach($event)"
+            style="display: none;" multiple />
+          <div class="select-contract">
+            <div class="div_file_attach">
+              <div *ngIf="this.attachFormFileNameArr.length == 0" style="color:gray">{{'choose.contract.file.attach' |
+                translate }}</div>
+              <div *ngFor="let item of this.datasForm.attachFormFileNameArr; let i = index" style="width: 80%;">
+                {{item.filename}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item, i)"
+                  src="../../../../../../assets/img/icon_close.svg"></div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="label_item">Số hợp đồng </div>
-            <div class="input-group">
-                <input #nameContract type="text" [(ngModel)]="code" class="input_text" placeholder="Nhập số hợp đồng"
-                    />
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="select-file-contract">
-              <div class="file-approve">
-                <div class="label_item">{{'file.attach' | translate}}</div>
-                <input id="attachFile" type="file" accept=".pdf, .doc, .docx"
-                      (change)="fileChangedAttach($event)" style="display: none;" multiple/>
-                <div class="select-contract" >
-                  <div class="div_file_attach">
-                    <div *ngIf="this.attachFileNameArr.length == 0" style="color:gray">{{'choose.contract.file.attach' | translate }}</div>
-                    <div *ngFor="let item of this.datasForm.attachFileNameArr; let i = index" style="width: 80%;">{{item.filename}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item, i)" src="../../../../../../assets/img/icon_close.svg"></div>
-                  </div>
-                  <img src="assets/img/attachment.svg" alt="mobifone.contract" (click)="addFileAttach()">
-                </div>
-              </div>
-            </div>
+            <img src="assets/img/attachment.svg" alt="mobifone.contract" (click)="addFileAttach()">
           </div>
-        <div class="form-group">
-            <div class="label_item">Lời nhắn </div>
-            <div class="input-group">
-                 <!-- <textarea placeholder="Nhập lời nhắn" style="border: 1px solid #2196F3; height: 117px; outline: none; width: 100%; border-radius: 5px; padding-left: 11px;">
-                </textarea> -->
-
-                <textarea name="" placeholder="Nhập lời nhắn" style="width: 100%; height: 117px;border: 1px solid #2196F3; border-radius: 5px; padding-left: 11px;outline: none;" id="" cols="30" rows="10"></textarea>
-            </div>
         </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="label_item">Lời nhắn </div>
+      <div class="input-group">
+        <textarea name="" placeholder="Nhập lời nhắn"
+          style="width: 100%; height: 117px;border: 1px solid #2196F3; border-radius: 5px; padding-left: 11px;outline: none;" [(ngModel)]="datasForm.notes"
+          id="" cols="30" rows="10"></textarea>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-2"></div>
+
+  <div class="col-md-5" style="display: flex; flex-direction: column">
+    <div class="form-group">
+      <div class="label_item">Tên hợp đồng <span class="require_star">*</span></div>
+      <div class="input-group">
+        <input #nameContract type="text" [(ngModel)]="datasForm.name" class="input_text" placeholder="Nhập tên hợp đồng" />
+      </div>
     </div>
 
-    <div class="col-md-2"></div>
-
-    <div class="col-md-5" style="display: flex; flex-direction: column">
-        <div class="form-group">
-            <div class="label_item">Tên hợp đồng <span class="require_star">*</span></div>
-            <div class="input-group">
-                <input #nameContract type="text" [(ngModel)]="name" class="input_text" placeholder="Nhập tên hợp đồng"
-                     />
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="label_item">{{'contract.type' | translate}}</div>
-            <div>
-              <p-dropdown
-                panelStyleClass="font"
-                [options]="typeList"
-                [(ngModel)]="type_id"
-                optionLabel="name"
-                optionValue="id"
-                placeholder="Chọn loại hợp đồng"
-                [filter]="true"
-                filterBy="name"
-                [showClear]="true"
-                ></p-dropdown>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <div class="label_item">{{'contract.connect' | translate}}</div>
-            <div>
-              <p-multiSelect 
-                styleClass="font" 
-                [options]="contractConnectList" 
-                [(ngModel)]="contractConnect" 
-                optionLabel="name" 
-                optionValue="id" 
-                display="chip" 
-                placeholder="Chọn hợp đồng" 
-                >
-                </p-multiSelect>
-            </div>
-          </div>
-
-
-        <div class="form-group">
-            <div class="label_item">Ngày hết hạn ký <span class="require_star">*</span></div>
-            <div>
-                <p-calendar [(ngModel)]="timeDateSign" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true" aria-placeholder="chọn ngày hết hạn"
-                    dateFormat="dd/mm/yy"></p-calendar>
-            </div>
-        </div>
+    <div class="form-group">
+      <div class="label_item">{{'contract.type' | translate}}</div>
+      <div>
+        <p-dropdown panelStyleClass="font" [options]="typeList" [(ngModel)]="datasForm.type_id" optionLabel="name"
+          optionValue="id" placeholder="Chọn loại hợp đồng" [filter]="true" filterBy="name" [showClear]="true"
+          (onChange)="onChangeType($event)"></p-dropdown>
+      </div>
     </div>
 
-    <div class="footer-infor-contract">
-        <button (click)="saveDraft()" type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate }}</button>
-        <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate }}</button>
+    <div class="form-group">
+      <div class="label_item">{{'contract.connect' | translate}}</div>
+      <div>
+        <p-multiSelect styleClass="font" [options]="contractConnectList" [(ngModel)]="contractConnect"
+          optionLabel="name" optionValue="id" display="chip" placeholder="Chọn hợp đồng" (onChange)="onChangeContractConnect($event)">
+        </p-multiSelect>
+      </div>
     </div>
+
+
+    <div class="form-group">
+      <div class="label_item">Ngày hết hạn ký <span class="require_star">*</span></div>
+      <div>
+        <p-calendar [(ngModel)]="this.datasForm.end_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true"
+          aria-placeholder="chọn ngày hết hạn" dateFormat="dd/mm/yy"></p-calendar>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-infor-contract">
+    <button (click)="saveDraft()" type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate
+      }}</button>
+    <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate
+      }}</button>
+  </div>
+
+  <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+    <p style="font-size: 18px; color: white">Đang xử lý...</p>
+  </ngx-spinner>
