--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -7,20 +7,22 @@
     <app-contract-form-header *ngIf="type == 2" #contractHeader [AddComponent]="this" [datasForm]="datasForm" [stepForm]="stepForm"
         (messageEvent)="receiveMessage($event)"></app-contract-form-header>
 
-    <div *ngIf="step == 'infor-contract' || stepForm == 'infor-contract-form'" class="row" style="margin: 0 18%">
+    <div class="row" style="margin: 0 18%">
         <div class="radio col-md-4 label_type">
-            <label><input type="radio" name="contract_create" [value]="1" [(ngModel)]="type"
-                    (change)="changeType($event)">
-                <span> {{'contract.not-by-template' | translate}}</span></label>
+            <label>
+                <input type="radio" name="contract_create" [value]="1" [(ngModel)]="type"
+                    (change)="changeType($event)" [disabled]="is_disable">
+                <span> {{'contract.not-by-template' | translate}}</span>
+            </label>
         </div>
         <div class="radio col-md-4 label_type">
             <label><input type="radio" name="contract_create" [value]="2" [(ngModel)]="type"
-                    (change)="changeType($event)">
+                    (change)="changeType($event)" [disabled]="is_disable">
                 <span> {{'contract.by-template' | translate}}</span></label>
         </div>
         <div class="radio col-md-4 label_type">
             <label><input type="radio" name="contract_create" [value]="3" [(ngModel)]="type"
-                    (change)="changeType($event)">
+                    (change)="changeType($event)" [disabled]="is_disable">
                 <span> {{'contract.by-batch' | translate}}</span></label>
         </div>
     </div>
