edit code step 1 create contract from form template

--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -3,7 +3,7 @@
     <div class="form-group">
       <div class="label_item">Mẫu hợp đồng <span class="require_star">*</span></div>
       <div>
-        <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="form_id" optionLabel="name"
+        <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="this.datasForm.form_id" optionLabel="name"
           optionValue="id" placeholder="Chọn hợp đồng" [filter]="true" filterBy="name" [showClear]="true"
           (onChange)="OnChangeForm($event)">
         </p-dropdown>
