--- a/src/app/main/contract-template/dialog/stop-contract-template-dialog/stop-contract-template-dialog.component.html
+++ b/src/app/main/contract-template/dialog/stop-contract-template-dialog/stop-contract-template-dialog.component.html
@@ -6,8 +6,8 @@
         <h3 style="font-family: inherit;">Bạn có chắc chắn muốn dừng phát hành mẫu hợp đồng này không?</h3>
     </div>
     <div class="row" style="justify-content: center;padding-top: 10px;">
-        <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-        <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
+        <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
+        <button class="save-button" (click)="onSubmit()">{{'btn.accept' | translate}}</button>
     </div>
 </div>
    
