--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -227,7 +227,7 @@
       <div class="contract__content--title">
         <div style="width: 72px">{{'doi_tac' | translate | uppercase}} -</div>
         <input type="text" placeholder="{{(item.type == 2 ? 'nhap_ten_doi_tac_to_chuc' : '') | translate}}"
-               [(ngModel)]="item.name" [disabled]="item.type == 3">
+               [(ngModel)]="item.name" disabled>
         <!--        <input *ngIf="item.type == 3" type="text" [ngModel]="this.getNameIndividual" disabled>-->
       </div>
       <div *ngIf="this.dataParnterOrganization().length > 1" style="display: flex; justify-content: flex-end">
