fix bug ben A danh sach

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -8,10 +8,10 @@
              oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
     </div>
     <div class="contract--content">
-      <!-- <div class="contract__content--title">
+      <div class="contract__content--title">
         <div>{{'organization.me' | translate | uppercase}} -</div>
         <input type="text" [(ngModel)]="data_organization.name" disabled>
-      </div> -->
+      </div>
       <div class="contract__content--participants">
         <div class="participants-border">
           <div class="label">{{'user.view' | translate}}</div>
